# log_analyzer_imp

./: .gitignore  12.csv  PATCH_README.md  README.md  README_PRIVATE_LLM.md  README_SECRETS.md  README_tests.md  del.sh  log_analyzer.db  main.py  match_batch_concurrency_analysis.md  match_batch_explanation.md  match_batch_issues_analysis.md  match_one_optimization_analysis.md  pyproject.toml  regex_safety_report.json  requirements.txt  slow_regex.csv  test_template_deletion.py
configs/: agents.yaml  application.yaml  committee.yaml  models.yaml  secrets.yaml  writer.yaml
core/: aggregator.py  buffer.py  committee.py  configs.py  dedup.py  indexer.py  ingestion.py  keyextract.py  keytext.py  llm.py  matcher.py  monitor.py  parser.py  preprocess.py  preprocessor.py  reader.py  regex_safety.py  templatemgr.py  templates.py  writer.py
core/utils/: config.py  logger.py
data/: log_analyzer.sqlite3
docs/: 11.md  8.md  9.md  design.md
preprocess/: sanitizers.py
store/: dao.py  dao_desc.py  schema.sql
store/ddl/: schema.sql
tests/: conftest.py  fakes.py  importdata.py  re_test.py  test_drafter.py  test_graph_closed_loop.py  test_keytext_parser.py  test_templates_db.py  test_truncation.py  testpattern.py
